<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".details.ui.DetailsActivity">

    <data>
        <variable
            name="champion"
            type="com.example.leagueoflegends.model.Champion" />

        <variable
            name="vm"
            type="com.example.leagueoflegends.details.ui.DetailViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp"
            android:descendantFocusability="blocksDescendants">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="6dp"
                android:translationZ="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/header"
                app:onBackPressed="@{true}"
                app:srcCompat="@drawable/ic_arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:translationZ="100dp"
                app:layout_constraintStart_toEndOf="@+id/arrow"
                app:layout_constraintTop_toTopOf="@+id/arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:text="@{vm.championInfoLiveData.id}"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="@+id/header"
                app:layout_constraintTop_toTopOf="@+id/header"
                tools:text="#001" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="36dp"
                android:text="@{champion.name}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"
                tools:text="skydoves" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@color/colorPrimary"
                android:elevation="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginBottom="20dp"
                android:scaleType="center"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:paletteImage="@{champion.splashImageUrl}"
                app:paletteView="@{header}"
                app:toast="@{vm.toastLiveData}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:listitem="@layout/item_details" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:gone="@{!vm.loading}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/attack"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{String.valueOf(vm.championInfoLiveData.info.attack)}"
                android:textSize="21sp"
                app:layout_constraintEnd_toStartOf="@+id/defense"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                tools:text="24.0" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/defense"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(vm.championInfoLiveData.info.defense)}"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/attack"
                app:layout_constraintTop_toTopOf="@+id/attack"
                tools:text="11" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/attack_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/defense"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attack"
                tools:text="Attack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/defense_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/attack"
                app:layout_constraintTop_toBottomOf="@+id/defense" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_title"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/base_stats"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/defense_title" />

            <TextView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/hp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stats_title" />

            <ProgressBar
                android:id="@+id/progress_hp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/hp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hp"
                app:layout_constraintTop_toTopOf="@+id/hp"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/colorPrimary"
                android:progress="@{vm.championInfoLiveData.stats.hpInt}" />

            <TextView
                android:id="@+id/damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/atk"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hp" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/damage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/progress_hp"
                app:layout_constraintTop_toTopOf="@+id/damage"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/md_orange_100"
                android:progress="@{vm.championInfoLiveData.stats.attackDamageInt}" />

            <TextView
                android:id="@+id/armor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/armor"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/damage" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/armor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/progress_hp"
                app:layout_constraintTop_toTopOf="@+id/armor"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/md_blue_200"
                android:progress="@{vm.championInfoLiveData.stats.armorInt}"/>

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/spd"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/armor" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/progress_hp"
                app:layout_constraintTop_toTopOf="@+id/speed"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/flying"
                android:progress="@{vm.championInfoLiveData.stats.attackSpeedInt }" />

            <TextView
                android:id="@+id/move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/move"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speed" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/move"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/progress_hp"
                app:layout_constraintTop_toTopOf="@+id/move"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/md_green_200"
                android:progress="@{vm.championInfoLiveData.stats.moveSpeedInt}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>